--- a/src/components/homePage/How/How.module.css
+++ b/src/components/homePage/How/How.module.css
@@ -14,7 +14,7 @@
   margin-left: auto;
   margin-right: auto;
   gap: 3rem;
-  padding: 10rem 5rem;
+  padding: 10rem 8rem;
 }
 
 .heading {
@@ -62,6 +62,7 @@
 @media screen and (max-width: 568px) {
   .top {
     width: 100%;
+    padding: 10rem 5rem;
     padding-bottom: 12rem;
   }
 
