--- a/src/components/shared/FinalCTA/FinalCTA.module.css
+++ b/src/components/shared/FinalCTA/FinalCTA.module.css
@@ -14,18 +14,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  /* background-color: var(--blue);
+  clip-path: var(--clip-path-3);
+  padding: 10rem 5rem; */
 }
 
-.lottieBox {
-  width: 100%;
-  height: 200px;
-  margin-bottom: 1rem;
-}
-
-.lottie {
-  height: 100%;
-  width: 100%;
-}
 
 .btnContainer {
   display: flex;
@@ -44,9 +37,5 @@
   .container {
     padding: 5rem 0rem;
     padding-bottom: 10rem;
-  }
-
-  .lottieBox {
-    height: 100px;
   }
 }
