--- a/src/components/shared/Footer/Footer.module.css
+++ b/src/components/shared/Footer/Footer.module.css
@@ -1,13 +1,17 @@
 .container {
-  border-radius: 25px;
+  /* border-radius: 25px; */
   background-color: var(--black);
   margin: 1rem;
   padding-top: 1rem;
   position: relative;
-  border-bottom: 1rem solid var(--white);
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
+  /* border-bottom: 1rem solid var(--white); */
+  /* border-bottom-left-radius: 0px; */
+  /* border-bottom-right-radius: 0px; */
   z-index: 1;
+  clip-path: var(--clip-path-1);
+  margin-bottom: -1rem;
+
+  /* padding: 3rem; */
 }
 
 .logoContainer {
@@ -26,39 +30,20 @@
 }
 
 .left {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 2rem;
-  width: 100%;
-  background-color: var(--blue);
-  padding: 2rem;
-  border-radius: 15px;
+  /* background-color: var(--blue);
+  clip-path: var(--clip-path-1); */
+  padding: 3rem;
 }
 
-.subscribeHeading {
-  color: var(--black);
-  font-family: var(--PPNeueMontrealMediumThick);
+.heading {
+  color: var(--blue);
+}
+
+.span {
+  color: var(--white);
+  font-family: var(--PerfectlyNinetiesItalic);
   font-weight: 500;
-}
-
-.emailBox {
-  font-size: 1.6rem;
-  color: var(--black);
-  border-bottom: 1px solid var(--black);
-  padding-bottom: 1rem;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 2rem;
-}
-
-.arrow {
-  transform: rotate(90deg);
-  font-size: 2rem;
-  color: var(--black);
+  line-height: inherit;
 }
 
 .right {
@@ -143,7 +128,7 @@
   color: var(--tan);
 }
 
-@media screen and (max-width: 1068px) {
+@media screen and (max-width: 1268px) {
   .top {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -154,7 +139,15 @@
   }
   .left {
     margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
+
+  .heading {
+    text-align: center;
+  }
+
   .bottom {
     flex-direction: column;
   }
@@ -168,7 +161,6 @@
   .emailBox {
     width: 100%;
   }
-
 }
 
 @media screen and (max-width: 568px) {
@@ -182,6 +174,11 @@
     transform: translateX(0%);
   }
 
+  .left {
+    padding: 0rem;
+    margin-bottom: 3rem;
+  }
+
   .right {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -190,7 +187,23 @@
     margin-bottom: 5rem;
   }
 
+  .optionSection:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+  }
+
+  .optionSection:nth-child(2) .option {
+    text-align: right;
+    width: 100%;
+  }
+
   .b1 {
     flex-direction: column;
+  }
+
+  .bottom {
+    margin-top: 0rem;
   }
 }
